fix css row gap

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -164,7 +164,7 @@ main.main-tickets-admin, main.main-details {
     flex-wrap: wrap;
     flex-direction: row;
     row-gap: 30px;
-    column-gap: 80px;
+    column-gap: 93px;
     width: 87%;
 }
 
